Fixed bugs. Change imports structure. Update propTypes.

--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -13,6 +13,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
+  margin-bottom: 5px;
 
   &:hover {
 	box-shadow: 5px 4px 10px 0px rgba(20, 23, 28, 0.1);
