Change methods in Copy and Create GroupModal. Added redirect in new page. Fixed styles.

--- a/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
@@ -1,3 +1,19 @@
 .change-owner-block {
-  margin: 15px 0 20px;
+  margin: 15px 0 0;
+
+  p {
+	margin: 0 0 10px;
+  }
+}
+
+.modal-text {
+  margin: 0 0 10px;
+}
+
+.modal-text + span {
+  margin-bottom: 20px;
+}
+
+.modal-label {
+  display: block;
 }
