--- a/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CreateGroupModal/style.less
@@ -1,11 +1,8 @@
-.modal-header {
-  font-weight: 500;
-  text-align: left;
-  font-size: 32px;
-  line-height: 40px;
+.modal-label {
+  padding-bottom: 22px;
+  margin: 0;
 }
 
-.modal-label {
-  width: 35%;
-  font-size: 22px;
+p {
+  margin: 0;
 }
