--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
@@ -1,43 +1,38 @@
 @import "../../../../variables.less";
 
 .group-header {
-  //display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
-  width: 70%;
-  //height: 100%;
+  width: 100%;
   margin: 0 auto;
-  //position: sticky;
-  top: 50px;
-  z-index: 99;
   background: #fff;
-  //border-bottom: 1px solid  #d9d9d9;
-  box-shadow:   0 5px 5px -5px rgba(0,0,0,.2);
+  //box-shadow:   0 5px 5px -5px rgba(0,0,0,.2);
+  border-bottom: 1px solid #eee;
+  padding: 30px 0 0;
+
 
   @media (max-width: @maxTabletWidth) {
 	display: block;
 	border-bottom: none;
   }
 
-  .group-header-container{
+  .group-header-container {
 	display: flex;
-	align-items: baseline;
 	justify-content: space-between;
+	width: 70%;
+	margin: 0 auto;
 
 	@media (max-width: @maxTabletWidth		) {
 	  display: block;
 	  border-bottom: none;
 	}
-  }
 
   h2 {
 	font-weight: 500;
 	text-align: left;
 	font-size: 32px;
-	line-height: 40px;
+	line-height: 50px;
 	border: none;
-	padding-bottom: 0;
+	padding: 0 0 0 27px;
+	margin: 20px 0;
 
 	@media (max-width: @maxPhoneWidth) {
 	  font-size: 22px;
@@ -47,15 +42,23 @@
   .buttons-container {
 	margin: 20px 0;
 
+	@media (max-width: @maxPhoneWidth) {
+	  padding-left: 27px;
+	}
+
 	button {
 	  @media (max-width: @maxPhoneWidth) {
 		font-size: 12px;
 	  }
 	}
   }
+  }
+
 
   .tabs-container {
-	margin-top: 30px;
+	width: 70%;
+	margin: 30px auto -1px;
+	padding-left: 27px;
 
 	a {
 	  @media (max-width: @maxPhoneWidth) {
