--- a/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupInfo/style.less
@@ -1,11 +1,11 @@
 @import "../../../../variables.less";
 
 .group {
-  width: 100%;
-  padding: 15px 0;
+  width: 103%;
+  padding: 0 0 15px 27px;
   transition: 0.3s ease-in;
   position: relative;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   box-shadow: none;
   background: #fff;
   border-radius: 2px;
@@ -13,40 +13,11 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: baseline;
-  margin-bottom: 5px;
+  cursor: pointer;
 
   &:hover {
-	box-shadow: 5px 4px 10px 0px rgba(20, 23, 28, 0.1);
-  }
-
-  &::before,
-  &::after {
-	//content: "";
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	transition: .2s ease;
-	pointer-events: none;
-  }
-
-  &::before {
-	box-shadow: 0 0 1px 1px rgba(20, 23, 28, .1), 0 3px 1px 0 rgba(20, 23, 28, .1);
-	opacity: 1;
-  }
-
-  &::after {
-	box-shadow: 0 2px 8px 2px rgba(20, 23, 28, .15);
-	opacity: 0;
-  }
-
-  &:hover:before {
-	opacity: 0;
-  }
-
-  &:hover:after {
-	opacity: 1;
+	//box-shadow: 5px 4px 10px 0px rgba(20, 23, 28, 0.1);
+	background-image: linear-gradient(rgba(255,255,255,1),rgba(229,229,229,0.3));
   }
 }
 
@@ -71,7 +42,7 @@
 }
 
 .group-content-main {
-  width: 70%;
+  width: 55%;
   align-self: baseline;
 
   @media (max-width: @maxTabletWidth) {
@@ -96,8 +67,8 @@
 }
 
 .group-content-state {
-  width: 30%;
-  align-self: baseline;
+  width: 35%;
+  align-self: flex-end;
 
   span {
 	margin-right: 5px;
@@ -123,7 +94,7 @@
 .group-action {
   justify-self: end;
   margin-right: 20px;
-  height: 40px;
+  height: 30px;
   cursor: pointer;
   align-self: baseline;
 
