--- a/src/Frontend/src/pages/course/groups/groupsPage.less
+++ b/src/Frontend/src/pages/course/groups/groupsPage.less
@@ -1,3 +1,5 @@
+@minHeight: calc(100vh - 60px);
+
 html, body, #root {
   height: 100%;
 }
@@ -33,8 +35,7 @@ button {
   width: 100%;
   background-color: #f2f2f2;
   margin: 0 auto;
-  //height: 100%;
-  min-height: 100%;
+  min-height: @minHeight;
 }
 
 .content-wrapper {
@@ -42,4 +43,5 @@ button {
   width: 70%;
   margin: 0 auto;
   height: 100%;
+  min-height: @minHeight;
 }
