--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -6,12 +6,12 @@
 
 .content-wrapper {
   background: #fff;
-  width: 70%;
+  width: 80%;
   margin: 0 auto;
 }
 
 .group-settings-wrapper {
-  border-bottom: 1px solid #ebebeb;
+  //border-bottom: 1px solid #ebebeb;
   width: 70%;
   margin: 0 auto 40px;
 }
@@ -27,15 +27,30 @@ h2 {
   font-size: 32px;
   line-height: 40px;
   margin: 0 0 10px 0;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: none;
   padding: 30px 0;
 }
 
-h3 {
-  font-size: 22px;
+h4 {
+  font-size: 18px;
   line-height: 30px;
   margin: 10px 0 15px 0;
   font-weight: 500;
+}
+
+.teachers-block {
+
+  h4 {
+	margin: 20px 0;
+  }
+
+  label {
+	margin: 10px 0;
+  }
+
+  input {
+	width: 100%;
+  }
 }
 
 .teacher-block {
@@ -43,16 +58,48 @@ h3 {
   flex-direction: row;
   justify-content: flex-start;
   margin: 20px 0;
-
-  img::before {
-	content: '\1F63A';
-  }
+  align-items: flex-start;
 
   .teacher-block-name {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	margin-left: 30px;
+	margin-left: 15px;
+  }
+
+  .teacher-photo {
+	width: 55px;
+	height: 55px;
+	display: inline-block;
+	border-radius: 50%;
+  }
+
+  .color-avatar {
+	 color: #fff;
+	font-size: 30px;
+	font-weight: 500;
+	text-align: center;
+	padding-top: 5px;
+	border-radius: 50%;
+  }
+}
+
+.students-block-invite {
+
+  p {
+	margin: 10px 0;
+  }
+
+  label {
+	display: block;
+	width: 100%;
+  }
+
+  .toggle-invite {
+	margin: 20px 0;
+
+	label {
+	  display: inline-block;
+	  margin-right: 10px;
+	  width: 34px;
+	}
   }
 }
 
