Fixed code and styles bugs

--- a/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
@@ -6,14 +6,19 @@
   }
 }
 
-.modal-text {
+.course-info, .group-info {
   margin: 0 0 10px;
 }
 
-.modal-text + span {
-  margin-bottom: 20px;
+.course-info + span {
+  margin-bottom: 15px;
 }
 
 .modal-label {
   display: block;
+}
+
+.empty-group-text {
+  display: inline-block;
+  margin-left: 10px;
 }
