--- a/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupHeader/style.less
@@ -29,10 +29,9 @@
 	font-weight: 500;
 	text-align: left;
 	font-size: 32px;
-	line-height: 50px;
+	line-height: 30px;
 	border: none;
-	padding: 0 0 0 27px;
-	margin: 20px 0;
+	margin: 0;
 
 	@media (max-width: @maxPhoneWidth) {
 	  font-size: 22px;
@@ -43,7 +42,7 @@
 	margin: 20px 0;
 
 	@media (max-width: @maxPhoneWidth) {
-	  padding-left: 27px;
+	  //padding-left: 27px;
 	}
 
 	button {
@@ -58,7 +57,6 @@
   .tabs-container {
 	width: 70%;
 	margin: 30px auto -1px;
-	padding-left: 27px;
 
 	a {
 	  @media (max-width: @maxPhoneWidth) {
