--- a/src/Frontend/src/components/groups/GroupMainPage/GroupList/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/GroupList/style.less
@@ -29,8 +29,8 @@
 
   label {
 	font-weight: 400;
-	width: 97%;
-	margin: 0 0 0 27px;
+	width: 100%;
+	margin: 0;
   }
 
   input {
@@ -44,4 +44,8 @@
   a {
 	text-decoration: none;
   }
+}
+
+.groups-container {
+  margin: 0 -27px;
 }
