--- a/src/Frontend/src/pages/course/groups/groupSettings.less
+++ b/src/Frontend/src/pages/course/groups/groupSettings.less
@@ -31,7 +31,7 @@ h2 {
   font-size: 32px;
   line-height: 40px;
   margin: 0 0 10px 0;
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: none;
   padding: 30px 0;
 }
 
@@ -48,10 +48,11 @@ h3 {
 }
 
 .tabs-container {
+  border-bottom: 1px solid #eee;
+
   a:hover {
 	text-decoration: none;
 	color: #333;
-	//border-bottom: none;
   }
   a:focus {
 	text-decoration: none;
