Fixed bugs. Change styles.

--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
@@ -64,7 +64,7 @@ h3 {
 }
 
 .group-name-label {
-  width: 30%;
+  width: 20%;
   display: inline-block;
   line-height: 30px;
   margin: 0 10px 25px 0;
@@ -72,6 +72,7 @@ h3 {
   h4 {
 	font-weight: 500;
 	font-size: 18px;
+	margin: 0 0 15px 0;
   }
 }
 
@@ -94,15 +95,31 @@ label {
 
 .points-block {
 
-  label{
-	margin-bottom: 7px;
+  h4 {
+	margin: 10px 0;
   }
+
+  label{
+	margin-bottom: 10px;
+
+	label {
+	  margin-bottom: 3px;
+	}
+  }
+
   p {
 	margin-bottom: 10px;
   }
 
   .points-block-comment {
-	margin: -5px 0 10px 27px;
+	margin: -5px 0 0 27px;
 	color: rgba(0, 0, 0, 0.5);
+  }
+}
+
+.exercise-comment {
+
+  p {
+	margin: 0;
   }
 }
