--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -39,13 +39,18 @@ h4 {
 }
 
 .teachers-block {
+  margin-bottom: 30px;
 
   h4 {
-	margin: 20px 0;
+	margin: 20px 0 5px 0;
   }
 
   label {
-	margin: 10px 0;
+	margin: 0 0 10px 0;
+
+	p {
+	  margin-bottom: 10px;
+	}
   }
 
   input {
@@ -57,7 +62,7 @@ h4 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  margin: 20px 0;
+  margin: 10px 0;
   align-items: flex-start;
 
   .teacher-block-name {
@@ -68,7 +73,11 @@ h4 {
 	width: 55px;
 	height: 55px;
 	display: inline-block;
-	border-radius: 50%;
+	border-radius: 4px;
+  }
+
+  .teacher-status {
+	color: #737373;
   }
 
   .color-avatar {
@@ -77,11 +86,21 @@ h4 {
 	font-weight: 500;
 	text-align: center;
 	padding-top: 5px;
-	border-radius: 50%;
+	border-radius: 4px;
+  }
+
+  .group-action {
+	margin-left: auto;
+  }
+}
+.students-block {
+  h4 {
+	margin: 0 0 5px 0;
   }
 }
 
 .students-block-invite {
+  margin: 0 0 20px;
 
   p {
 	margin: 10px 0;
@@ -93,7 +112,11 @@ h4 {
   }
 
   .toggle-invite {
-	margin: 20px 0;
+	margin: 10px 0;
+
+	.toggle-label {
+	  width: 350px;
+	}
 
 	label {
 	  display: inline-block;
@@ -101,8 +124,4 @@ h4 {
 	  width: 34px;
 	}
   }
-}
-
-.students-block-invite {
-  margin: 10px 0 20px;
 }
