Added Combobox. Move methods with accesses action in GroupMembers page.

--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -70,10 +70,10 @@ h4 {
   }
 
   .teacher-photo {
-	width: 55px;
-	height: 55px;
 	display: inline-block;
 	border-radius: 4px;
+	width: 55px;
+	height: 55px;
   }
 
   .teacher-status {
@@ -81,7 +81,7 @@ h4 {
   }
 
   .color-avatar {
-	 color: #fff;
+	color: #fff;
 	font-size: 30px;
 	font-weight: 500;
 	text-align: center;
@@ -123,5 +123,26 @@ h4 {
 	  margin-right: 10px;
 	  width: 34px;
 	}
+  }
+}
+
+.combo-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  .combo-item_avatar {
+	font-size: 16px;
+	font-weight: 500;
+	color: #fff;
+	width: 20px;
+	height: 20px;
+	text-align: center;
+	border-radius: 4px;
+	margin-right: 5px;
+  }
+
+  .combo-item_login {
+	margin-left: auto;
   }
 }
