Convert LINQ course to xml slides

--- a/src/uLearn.Web/Views/Admin/SpellingErrors.cshtml
+++ b/src/uLearn.Web/Views/Admin/SpellingErrors.cshtml
@@ -8,7 +8,7 @@
 		<pre>@error</pre>
 	}
 	<p>
-		Включите в архив с курсом файл dictionary.txt с исключениями, чтобы убрать ложные срабатывания.
+		Включите в архив с курсом файл dictionary.txt (и укажите в файле course.xml тег &lt;dictionaryFile&gt;dictionary.txt&lt;/dictionaryFile&gt;) с исключениями, чтобы убрать ложные срабатывания.
 
 		Формат файла dictionary.txt — по одному слову в строке. Через двоеточие можно указать известное слово, которое склоняется так же как и новое.
 		Пример:
