Added styles for media. Fixed style bugs.

--- a/src/Frontend/src/components/common/Header.less
+++ b/src/Frontend/src/components/common/Header.less
@@ -248,3 +248,33 @@
 .notifications__dropdown {
     list-style: none;
 }
+
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed;
+  border-top: 4px solid \9;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
+
+.visible-only-phone {
+  display: none;
+
+  @media (max-width: @maxPhoneWidth) {
+	& {
+	  display: initial;
+	}
+  }
+}
+
+.visible-at-least-tablet {
+  @media (max-width: @maxPhoneWidth) {
+	& {
+	  display: none !important;
+	}
+  }
+}
