--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupSettings/style.less
@@ -27,7 +27,6 @@ h2 {
   font-size: 32px;
   line-height: 40px;
   margin: 0 0 10px 0;
-  //border-bottom: 1px solid #ebebeb;
   padding: 30px 0;
 }
 
@@ -43,7 +42,7 @@ h3 {
   margin: 0 0 40px 0;
 
   @media (max-width: @maxTabletWidth) {
-	margin: 0 auto;
+	margin: 0 auto 30px;
 	width: 100%;
 	height: 100%;
   }
