--- a/src/Frontend/src/pages/course/groups/groupPage.less
+++ b/src/Frontend/src/pages/course/groups/groupPage.less
@@ -8,6 +8,7 @@ html, body, #root {
 body {
   margin: 0;
   font-family: "Segoe UI",Arial,sans-serif;
+  min-width: 320px;
 }
 
 button {
@@ -63,6 +64,10 @@ h3 {
   height: 100%;
   min-height: @minHeight;
 
+  @media (max-width: @maxLaptopWidth) {
+	width: 90%;
+  }
+
   @media (max-width: @maxTabletWidth) {
 	width: 100%;
   }
@@ -77,11 +82,10 @@ h3 {
 
   @media (max-width: @maxTabletWidth) {
 	display: block;
-	border-bottom: none;
   }
 
   h2 {
-	width: 70%;
+	width: 80%;
 	margin: 0 auto;
 	font-weight: 500;
 	text-align: left;
@@ -89,28 +93,31 @@ h3 {
 	line-height: 30px;
 	border: none;
 
-	  @media (max-width: @maxPhoneWidth) {
-		font-size: 22px;
-	  }
+	@media (max-width: @maxTabletWidth) {
+	  padding: 0;
+	}
+
+	@media (max-width: @maxPhoneWidth) {
+	  font-size: 22px;
 	}
   }
 
-.tabs-container {
-  border-bottom: 1px solid #eee;
-  width: 70%;
-  margin: 30px auto -1px;
+  .tabs-container {
+	width: 80%;
+	margin: 30px auto -1px;
 
-  a:hover {
-	text-decoration: none;
-	color: #333;
-  }
-  a:focus {
-	text-decoration: none;
+	a:hover {
+	  text-decoration: none;
+	  color: #333;
+	}
+	a:focus {
+	  text-decoration: none;
+	}
   }
 }
 
 .content {
-  width: 70%;
+  width: 80%;
   margin: 30px auto;
 }
 
