--- a/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
+++ b/src/Frontend/src/components/groups/GroupMainPage/CopyGroupModal/style.less
@@ -1,3 +1,7 @@
+.modal-text {
+  margin-bottom: 10px;
+}
+
 .change-owner-block {
   margin: 15px 0 0;
 
@@ -7,7 +11,7 @@
 }
 
 .course-info, .group-info {
-  margin: 0 0 10px;
+  margin: 0 0 5px;
 }
 
 .course-info + span {
