--- a/src/uLearn.Web/Views/Sandbox/Index.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Database.Models
 @using RunCsJob.Api
 @using uLearn.Web.Extensions
-@using Ulearn.Common.Extensions
 @using Ulearn.Core
 
 @model SubmissionsListModel
@@ -33,7 +32,7 @@
 		<tr class="@SubmissionClass(automaticChecking != null ? automaticChecking.GetVerdict() : "") submitions-item" data-id="@submission.Id">
 			<td>@submission.Id</td>
             <td title="@submission.Timestamp">@submission.Timestamp.ToPrettyString(true)</td>
-            <td>@submission.Language.GetName()<td>
+            <td>@submission.Language.GetName()</td>
             @if (automaticChecking != null)
             {
 	            <td>@automaticChecking.Elapsed</td>
