Added ModalWindow for copy students. Added method for api.

--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -151,7 +151,7 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: row;
-	align-items: center;
+	align-items: flex-end;
 	margin: 0 10px 10px 0;
 
 	label {
@@ -165,7 +165,7 @@
 	background: transparent;
 	color: #aaa;
 	padding: 0;
-	margin-right: 10px;
+	margin-right: 20px;
   }
 
   .students-action__text {
@@ -184,5 +184,30 @@
 	flex-direction: column;
 	width: fit-content;
   }
+
+  .modal-text {
+	margin-bottom: 10px;
+  }
+
+  .select-course {
+	width: fit-content;
+  }
+
+  .course-info, .group-info {
+	margin: 0 0 5px;
+  }
+
+  .group-info {
+	margin-top: 15px;
+  }
+
+  .empty-group-text {
+	display: inline-block;
+	margin-left: 10px;
+  }
+
+
+
+
 
 
