--- a/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
+++ b/src/Frontend/src/components/groups/GroupSettingsPage/GroupMembers/style.less
@@ -123,27 +123,47 @@
 	}
   }
 
-  .students-invite-text {
-	  margin: 10px 0 5px 0;
-  }
-
-  .students-invite {
-	margin: 0 10px 5px 0;
-	display: inline-block;
-	vertical-align: super;
-  }
-
-  .invite-link {
-	display: inline-block;
-	margin: 5px 0 15px;
+  .toggle-invite {
 	cursor: pointer;
+	margin: 10px 0 5px;
+  }
 
-	&_on {
-	  color: #3f9726;
+  .toggle-invite-text {
+	margin-left: 7px;
+  }
+
+  .invite-link-block {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	margin: 5px 0 10px;
+	cursor: pointer;
+  }
+
+  .invite-link-input {
+	display: inline-block;
+	width: 100%;
+
+	label {
+	  width: 100%;
 	}
 
-	&_off {
-	  color: #aaa;
+	@media (max-width: @maxPhoneWidth) {
+	  display: none;
+	}
+  }
+
+  .invite-link-text {
+	display: inline-block;
+	margin-right: 10px;
+
+	span {
+	  &:hover {
+		text-decoration-line: underline;
+		text-decoration-style: solid;
+		text-decoration-color: #3072C4;
+	  }
 	}
   }
 
@@ -151,31 +171,38 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: row;
-	align-items: flex-end;
-	margin: 0 10px 10px 0;
+	align-items: center;
+	margin: 0 0 10px 0;
 
 	label {
 	  width: auto;
-	  margin-right: 20px;
+	  margin: 0 30px 0 0;
 	}
   }
 
   .students-action {
 	border: none;
 	background: transparent;
-	color: #aaa;
+	color: #A0A0A0;
 	padding: 0;
 	margin-right: 20px;
+  }
+
+  .button-copy {
+	color: #3072C4;
+  }
+
+  .button-delete {
+	color: #CE0014;
   }
 
   .students-action__text {
 	@media (max-width: @maxPhoneWidth) {
 	  display: none;
 	}
-  }
-
-  ._active {
-	color: #000;
+	&:hover {
+	  text-decoration-line: underline;
+	}
   }
 
   .student-block {
@@ -205,6 +232,7 @@
 	display: inline-block;
 	margin-left: 10px;
   }
+
 
 
 
