CourseLoadingContext, SlideLoadingContext and SlideBuildingContext
+ don't validate input on /Admin/Packages, because error is passed via query string
+ truncate filenames in error message while course load, show only part from archive

--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -26,7 +26,7 @@
                 <b>Ошибка в&nbsp;архиве:</b> @Html.Raw(Model.Error.EscapeHtml().LineEndingsToBrTags())
             </p>
             <p class="text-muted">
-                Если вы не&nbsp;понимаете, почему произошла эта ошибка, напишите нам на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
+                Непонятно, что произошло? Напишите нам на&nbsp;<a href="mailto:support@ulearn.me">support@ulearn.me</a>.
             </p>
         </div>
     }
