Support for <html> block inside slides
+ Convert courses Help and ForTests (last one in old format for a white)
+ Fix bug in frontend with CouresId= instead of courseId=
+ Remove duplicate schema.xsd

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -194,6 +194,11 @@
 	</div>
 }
 
+@helper Block(HtmlBlock block, BlockRenderContext context, HtmlHelper Html)
+{
+	@Html.Raw(block.Content)
+}
+
 @helper CodeTextArea(string initialCode, string langId, string runSolutionUrl)
 {
 	<textarea class="code code-exercise" data-lang="@langId">@initialCode</textarea>
